# HAIstings

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml
src/: haistings.py  k8sreport.py
src/haistings/: haistings.py  k8sreport.py  memory.py  prompts.py  repo_ingest.py
tests/: test_rag.py
