[tool.poetry]
name = "haistings"
version = "0.0.1"
description = "AI-powered CVE prioritizer"
authors = ["Stacklok Inc"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "haistings", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain = {extras = ["openai"], version = "^0.3.18"}
langchain-community = "^0.3.17"
langchainhub = "^0.1.21"
langgraph = "^0.2.72"
sh = "^2.2.1"
argparse = "^1.4.0"
gitingest = "^0.1.3"
gitpython = "^3.1.44"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
haistings = "haistings.haistings:main"
